<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  
  <!-- 画面タイトル -->
  <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10px">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/facebook_account_title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20px"/>
        </LinearLayout>
    </LinearLayout>

	<!-- 設定ユーザー情報 -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15px">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/facebook_account_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#ffffff">
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5px">
        <TextView
        	android:id="@+id/facebook_user_name"
            android:text="@string/facebook_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

	<!-- 各種ボタン -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15px">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5px">
       		<Button
       			android:id="@+id/register"
      		  	android:layout_width="wrap_content"	
		   		android:layout_height="wrap_content"
		    	android:text="@string/button_register">
        	</Button>
        	<Button
       			android:id="@+id/clear"
      		  	android:layout_width="wrap_content"	
		   		android:layout_height="wrap_content"
		    	android:text="@string/button_clear">
        	</Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
